// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · selected-read-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · selected-unread-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · unselected-read-normal 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > dark · unselected-unread-failed 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-failed ai-bit"
      >
        SYNC FAILED
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · selected-read-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · selected-unread-normal 1`] = `
<article
  class="row email-row is-selected"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · unselected-read-normal 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="true"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;

exports[`EmailRow — 8 combo render snapshots (DESIGN.md §5.1) > light · unselected-unread-failed 1`] = `
<article
  class="row email-row"
  data-flag="none"
  data-important="true"
  data-internal-id="101"
  data-pinned="false"
  data-priority="crit"
  data-read="false"
  data-thread="none"
  role="button"
  tabindex="0"
>
  <span
    aria-hidden="true"
    class="thread-chevron-cell"
  />
  <span
    aria-checked="false"
    aria-hidden="true"
    class="cb"
    role="checkbox"
  />
  <span
    aria-hidden="true"
    class="avatar avatar-5"
  >
    AL
  </span>
  <div
    class="row-content"
  >
    <div
      class="row-top"
    >
      <span
        class="sender-line"
      >
        <span
          class="sender-name"
        >
          Alice
        </span>
        <span
          class="recipient-hint"
        >
          , 
          alice@example.com
        </span>
         
        <span
          aria-label="English"
          class="lang-pip"
        >
          EN
        </span>
      </span>
      <span
        class="row-time"
      >
        2026/05/14 18:00
      </span>
    </div>
    <div
      class="subject-row"
    >
      <span
        class="subject-text"
      >
        redis timeout debug session
      </span>
      <span
        class="row-actions"
      >
        <button
          aria-label="Toggle flag"
          class="ricon ricon-flag"
          data-flag-state="0"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"
            />
            <line
              x1="4"
              x2="4"
              y1="22"
              y2="15"
            />
          </svg>
        </button>
        <button
          aria-label="Toggle pin"
          aria-pressed="false"
          class="ricon ricon-pin"
          type="button"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 4v6.59l3.71 3.71A1 1 0 0 1 19 16h-6v5l-1 1-1-1v-5H5a1 1 0 0 1-.71-1.71L8 10.59V4a1 1 0 0 1-1-1V2h10v1a1 1 0 0 1-1 1z"
            />
          </svg>
        </button>
        <span
          aria-label="2 attachments"
          class="ricon ricon-attach"
        >
          <svg
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M21.44 11.05l-9.19 9.19a6 6 0 0 1-8.49-8.49l9.19-9.19a4 4 0 0 1 5.66 5.66l-9.2 9.19a2 2 0 0 1-2.83-2.83l8.49-8.48"
            />
          </svg>
        </span>
        <span
          aria-label="Important"
          class="ricon ricon-important"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,17.0015 C13.3813,17.0015 14.5011,18.1213 14.5011,19.5026 C14.5011,20.8839 13.3813,22.0037 12,22.0037 C10.6187,22.0037 9.49888,20.8839 9.49888,19.5026 C9.49888,18.1213 10.6187,17.0015 12,17.0015 Z M12,18.5015 C11.4471,18.5015 10.9989,18.9497 10.9989,19.5026 C10.9989,20.0555 11.4471,20.5037 12,20.5037 C12.5529,20.5037 13.0011,20.0555 13.0011,19.5026 C13.0011,18.9497 12.5529,18.5015 12,18.5015 Z M11.999,2.00244 C14.1393,2.00244 15.8744,3.7375 15.8744,5.87781 C15.8744,8.71128 14.8844,12.4318 14.339,14.2756 C14.0294,15.322 13.0657,16.0039 12.0006,16.0039 C10.9332,16.0039 9.96846,15.3191 9.65995,14.2708 L9.43749451,13.4935787 C8.88270062,11.4994608 8.12366,8.3311 8.12366,5.87781 C8.12366,3.7375 9.85872,2.00244 11.999,2.00244 Z M11.999,3.50244 C10.6871,3.50244 9.62366,4.56593 9.62366,5.87781 C9.62366,8.43944 10.5512,11.9861 11.0989,13.8473 C11.2125,14.2332 11.573,14.5039 12.0006,14.5039 C12.4275,14.5039 12.7869,14.2344 12.9006,13.8501 L13.0583294,13.3056653 C13.6088628,11.3652034 14.3744,8.23351909 14.3744,5.87781 C14.3744,4.56593 13.3109,3.50244 11.999,3.50244 Z"
              fill-rule="nonzero"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="body-preview"
    >
      Hey, the redis client keeps timing out after 5s.
    </div>
    <div
      class="ai-strip"
    >
      <span
        aria-hidden="true"
        class="pdot"
      />
      <span
        class="pname"
      >
        CRITICAL
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-reply ai-bit"
        title="需要回复"
      >
        需要回复
      </span>
      <span
        class="sep"
      >
        ·
      </span>
      <span
        class="ai-failed ai-bit"
      >
        SYNC FAILED
      </span>
      <span
        class="ml-auto inline-flex items-center gap-1 text-ink-fg-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-paperclip"
          fill="none"
          height="10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
          />
        </svg>
        <span
          class="tabular-nums"
        >
          2
        </span>
      </span>
    </div>
  </div>
</article>
`;
